--- a/index.html
+++ b/index.html
@@ -28,11 +28,12 @@
   <div id="opGrid" class="grid"></div>
 
   <script>
+    // Firebase configuration
     const firebaseConfig = {
       apiKey: "AIzaSyCLhyvtqQICbcyuS4cr_1p5pXvQrMBDtXo",
       authDomain: "battle-ship-7fef4.firebaseapp.com",
       projectId: "battle-ship-7fef4",
-      storageBucket: "battle-ship-7fef4.firebasestorage.app",
+      storageBucket: "battle-ship-7fef4.appspot.com",
       messagingSenderId: "1063233375775",
       appId: "1:1063233375775:web:de60b46a690a8c013a4f2a",
       databaseURL: "https://battle-ship-7fef4-default-rtdb.firebaseio.com"
@@ -138,9 +139,7 @@
           }
         } else if (move.from === myId) {
           const cell = opGrid[move.y][move.x];
-          if (!cell.div.classList.contains("hit") && !cell.div.classList.contains("miss")) {
-            cell.div.classList.add(move.hit ? "hit" : "miss");
-          }
+          cell.div.classList.add(move.hit ? "hit" : "miss");
           if (move.hit) status("You hit!");
         }
       });
@@ -177,7 +176,7 @@
       for (let y = 0; y < gridSize; y++)
         for (let x = 0; x < gridSize; x++)
           if (grid[y][x]) count++;
-      return document.querySelectorAll("#opGrid .hit").length >= count;
+      return document.querySelectorAll(".hit").length >= count;
     }
 
     function status(msg) {
